add background image

--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cape Town Natural Landmarks</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <dv id="allhometxt">
-        <h1 id="sitename">CAPE TOWN</h1>
-        <h2 class="subheading">NATURAL LANDMARKS</h2>
-        <div id="pages">
-            <a class="homelinks">Landmark 1</a>
-            <a class="homelinks">Landmark 2</a>
-            <a class="homelinks">Landmark 3</a>
-        </div>
-    </dv>
+    <div class="bgimage">        
+    </div>
+    
 </body>
 </html>
